@@ -1,0 +1,26 @@
+#
+# This file is parsed by test_rdoc_markup_to_html_crossref.rb
+# during its tests.
+#
+class Ref_Class1
+end
+
+class Ref_Class2
+  class Ref_Class3
+    def method
+    end
+
+    class Helper1
+      def method?
+      end
+    end
+  end
+end
+
+class Ref_Class3
+  class Helper1
+  end
+
+  class Helper2
+  end
+end
